--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
-.App {
-  text-align: center;
+@import "css/navbar.css";
+@import "css/btn.css";
+
+
+* {
+    margin: 0px;
+    padding: 0px;
+    font-size: 18px;
+    font-family: 'Merriweather', serif;
+    letter-spacing: 1.1px;
+    list-style-type: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    font-family: Arial, "Helvetica Neue", sans-serif;
+    color: #002a00;
+    letter-spacing: 6px;
+    background-color: #eae3e3;
+    /*box-shadow: inset 1px 1px 70px 2px #303130;*/
+}
+h1{
+    text-align: center;
+    font-size: 70px;
+    font-family: Lobster;
+    text-decoration: underline;
+    letter-spacing: 3px;
+    font-weight: lighter;
+    padding: 50px 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2{
+    text-align: center;
+    font-size: 25px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.wrapper {
+    min-height: 100vh;
+    overflow: hidden;
+/**/
+    max-width: 1200px;
+    margin: 0 auto;
+/**/
+    display: flex;
+    flex-direction: column;
+    background-color: #c2c1c1;
+}
+/**/
+.header {
+    display: flex;
+    flex-direction: column;
+/**/
+}
+/**/
+.header_info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 20px 10px;
+/**/
+/**/
+    border-top: #002a00 solid 5px;
+}
+/**/
+.info_items {
+    display: flex;
+}
+/**/
+.nav_section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 10px;
+/**/
+    color: #dddddd;
+    background-color: #002a00;
+}
+/**/
+.navbar {
+    height: 50px;
+    background-color: #002a00;
+    color: white;
+}
+/**/
+/**/
+.content {
+    flex: 1 1 auto;
+/**/
+}
+/**/
+.section{
+    min-height: 75vh;
+    border-bottom: #dddddd solid 5px;
+}
+/**/
+.main_section{
+    padding-top: 50px;
+}
+/**/
+.calc_section{
+
+    padding: 10% 20%;
+}
+.calc_form{
+    padding: 30px;
+    border: #eae3e3 solid 1px;
+    border-radius: 30px;
+    background-color: #dddddd;
+    display: flex;
+    justify-content: space-between;
+}
+/**/
+.clean_info{
+    padding: 5%;
+    text-align: center;
+}
+.clean_info_title h3{
+    font-size: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+
+
+
+.footer {
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
